<?xml version="1.0"?>
<package format="2">
  <name>asd_core</name>
  <version>0.1.0</version>
  <description>Autonomous Slope Dependant Driver - Core</description>
  <maintainer email="deniz.ugur@ozu.edu.tr">Deniz Ugur</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/DenizUgur/asd_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python3</build_depend>
  <exec_depend>python3</exec_depend>
</package>
