<?xml version="1.0"?>
<package format="2">
  <name>asd_driver</name>
  <version>0.1.0</version>
  <description>Autonomous Slope Dependant Driver</description>
  <maintainer email="deniz.ugur@ozu.edu.tr">Deniz Ugur</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/OzURover</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtabmap_ros</build_depend>
  <exec_depend>rtabmap_ros</exec_depend>
</package>
